# GFlexLib

./: .gitignore  CMakeLists.txt  README.md
Containers/include/: gfl_list.h
Containers/src/: gfl_list.c
include/: gfl_error.h  gfl_generic.h  gfl_memalloc.h  gfl_utils.h
src/: gfl_error.c  gfl_generic.c
